config/base/operator-controller/manager/manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller-manager
  namespace: system
  annotations:
    kubectl.kubernetes.io/default-logs-container: manager
  labels:
    control-plane: operator-controller-controller-manager
spec:
  selector:
    matchLabels:
      control-plane: operator-controller-controller-manager
  replicas: 1
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: manager
      labels:
        control-plane: operator-controller-controller-manager
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: kubernetes.io/arch
                  operator: In
                  values:
                    - amd64
                    - arm64
                    - ppc64le
                    - s390x
                - key: kubernetes.io/os
                  operator: In
                  values:
                    - linux
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - command:
        - /operator-controller
        args:
        - "--health-probe-bind-address=:8081"
        - "--metrics-bind-address=:8443"
        - "--leader-elect"
        image: controller:latest
        imagePullPolicy: IfNotPresent
        name: manager
        volumeMounts:
          - name: cache
            mountPath: /var/cache
          - name: tmp
            mountPath: /tmp
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - "ALL"
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: 10m
            memory: 64Mi
        terminationMessagePolicy: FallbackToLogsOnError
      serviceAccountName: operator-controller-controller-manager
      terminationGracePeriodSeconds: 10
      volumes:
        - name: cache
          emptyDir: {}
        - name: tmp
          emptyDir: { }
