config/base/operator-controller/manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: olmv1-system
  labels:
    control-plane: operator-controller-controller-manager
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    control-plane: operator-controller-controller-manager
